Fixed dynamic currency change

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
   width: 38em;
 }
 
-#main_form {
+#purchase_form {
   align-content: center;
   padding-bottom: 1.5em;
   border-bottom: 1px solid #C0C0C0;
